--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,6 @@
+@ytailwind base;
+@tailwind component;
+@tailwind utilities;
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
