--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,8 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -20,11 +18,7 @@
   -webkit-text-size-adjust: 100%;
 }
 
-#video {
-  position: fixed;
-  z-index: -1;
-  width: 100%;
-}
+
 
 a {
   font-weight: 500;
@@ -78,4 +72,11 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+
+#video {
+  height: 100%;
+  z-index: -1;
+  width: 100%;
 }
