--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,7 @@
 
   #title {
     font-family: "Comic Neue", sans-serif;
+    font-weight: bold;
     font-size: 5vw;
     margin-left: 58px;
     
